# dayrider

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts  todo.md
app/: layout.tsx  page.tsx  providers.tsx
app/chatgpt/: page.tsx
app/components/: StatCards.tsx  StatWobbleCards.tsx
app/schedule/: page.tsx
app/settings/: page.tsx
app/todo/: page.tsx
app/todo/components/: AddItemInput.tsx  ConfirmPopup.tsx  CustomizedTypes.ts  DailyTasks.tsx  DayTodoItemLines.tsx  DeletePopover.tsx  ItemDetailModal.tsx  ItemLine.tsx  ItemLineDropDown.tsx  TaskDetailModal.tsx  TaskLine.tsx  (+1 more)
app/types/: calender.ts  person.ts  reminder.ts  todoItem.ts
components/: CheckList.tsx  EventCalendar.tsx  SideBar.tsx  TodoModal.tsx
components/icons/: AddIcon.tsx  CalendarIcon.tsx  IconWrapper.tsx  ItemCounter.tsx  TodoIcon.tsx  TrashIcon.tsx
components/ui/: wobble-card.tsx
dayrider/: package-lock.json  package.json  tailwind.config.ts
dayrider/app/: layout.tsx  page.tsx  providers.tsx
dayrider/components/: CheckList.tsx  EventCalendar.tsx  ListboxWrapper.tsx  SideBar.tsx  TodoModal.tsx
dayrider/src-tauri/: Cargo.toml  tauri.conf.json
dayrider/types/: task.d.ts
lib/: dateutil.ts  user.ts
lib/tasks/: backend.ts  config.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/task/: config.rs  db.rs  mod.rs
src-tauri/src/todo/: db.rs
src-tauri/src/user/: base.rs  mod.rs  properties.rs
types/: calender.ts  person.ts  reminder.ts  taskItem.ts  todoItem.ts  user.ts
(+16 files in other folders)
