[package]
name = "dayrider"
version = "0.1.7"
description = "dayrider app"
authors = ["cyborgoat"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
tauri = { version = "2", features = [] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
thiserror = "1.0.63"
directories = "5.0.1"
dirs = "5.0.1"
chrono = "0.4.38"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
